fixed header on small screens, again

--- a/index.css
+++ b/index.css
@@ -91,7 +91,7 @@ a {
     display: none;
   }
 }
-@media screen and (max-width: 900px) {
+@media screen and (max-width: 900px) and (max-height: 670px) {
   #hero .inner #header {
     position: inherit;
   }
