--- a/sass/_hero.scss
+++ b/sass/_hero.scss
@@ -107,7 +107,11 @@ a{
         }
 
         @media screen and  (max-width: 900px) {
-            position: inherit;
+            @media screen and  (max-height: 670px) {
+                position: inherit;
+
+            }
+
         }
     }
 
